[package]
name = "mdbook-tocjs"
version = "0.1.0"
edition = "2021"
authors = ["Acheul <seoul605.21@gmail.com>"]
license = "MIT"
repository = "https://github.com/acheul/mdbook-collectors"
description = "A mdbook preprocessor which adds extra js and css file for ToC hydration."
readme = "readme.md"
keywords = ["mdbook"]
exclude = ["assets", "tocjs"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
mdbook = "0.4.37"
semver = "1.0.22"
serde_json = "1.0.115"
toml = "0.5.11"
log = "0.4.21"